Fixed redirects after create, added create candidate, fixed spacing in expandable rows

--- a/client/src/pages/recruiter/AddCandidate/AddCandidate.css
+++ b/client/src/pages/recruiter/AddCandidate/AddCandidate.css
@@ -1,4 +1,4 @@
-.postAJobContainer {
+.postACandidateContainer {
     width: 100%;
     float: left;
     background: #e6e8ef; 
@@ -6,12 +6,12 @@
     padding: 20px;  
     color: #1a2b6d;
 }
-.postAJobContainer .formSection {
+.postACandidateContainer .formSection {
     margin: auto auto 25px auto;
     max-width: 1000px;
     position: relative; 
 } 
-.postAJobContainer input {
+.postACandidateContainer input {
     width: 100%;
     height: 40px; 
     padding: 0px 10px 0px 10px;
@@ -24,7 +24,7 @@
     border-bottom: 1px solid #fff;
     font-size: 20px; 
 }
-.postAJobContainer select {
+.postACandidateContainer select {
     width: 100%;
     height: 40px;  
     padding-left: 10px;
@@ -80,18 +80,18 @@ select:-moz-focusring {
 
  
 
-.postAJobContainer .user-input-wrp {
+.postACandidateContainer .user-input-wrp {
     position: relative; 
     margin-bottom: 30px;
 }
-.postAJobContainer input:focus,
-.postAJobContainer select:focus,
-.postAJobContainer textarea:focus  {
+.postACandidateContainer input:focus,
+.postACandidateContainer select:focus,
+.postACandidateContainer textarea:focus  {
     border: 1px solid #1a2b6d;
     border-color: #1a2b6d;
     box-shadow: none;
 }
-.postAJobContainer .floating-label {
+.postACandidateContainer .floating-label {
 	position: absolute;
 	pointer-events: none;
 	top: 12px;
@@ -113,18 +113,18 @@ select:-moz-focusring {
     font-weight: bold; 
 }  
 
-.postAJobContainer .input-2 {
+.postACandidateContainer .input-2 {
     width:100%; 
 }
-.postAJobContainer .i-2 {
+.postACandidateContainer .i-2 {
     width: 47.5%;
     float: left;
 } 
-.postAJobContainer .il {
+.postACandidateContainer .il {
     margin-right: 5%;
 }
  
-.postAJobContainer .btn-secondary {
+.postACandidateContainer .btn-secondary {
     width: 100%;
     padding: 10px; 
     cursor: pointer;
@@ -139,7 +139,7 @@ select:-moz-focusring {
     overflow: hidden; 
 }
 
-.postAJobContainer textarea {
+.postACandidateContainer textarea {
     width: 100%;
     max-width: 100%;
     min-width: 100%;
@@ -153,7 +153,7 @@ select:-moz-focusring {
     outline: none;
 }
 
-.submitJobBtn {
+.submitCandidateBtn {
     width: 100%;
     float: left;
     background: #1a2b6d;
@@ -166,13 +166,13 @@ select:-moz-focusring {
 }
 
 @media only screen and (max-width: 1000px) {
-    .postAJobContainer .i-2,
-    .postAJobContainer .i-4,
-    .postAJobContainer .i-small,
-    .postAJobContainer select {
+    .postACandidateContainer .i-2,
+    .postACandidateContainer .i-4,
+    .postACandidateContainer .i-small,
+    .postACandidateContainer select {
         min-width: 100% !important;
     }
-    .postAJobContainer .btn-secondary {
+    .postACandidateContainer .btn-secondary {
         border-radius: 0px;
     } 
 } 
