--- a/client/src/pages/recruiter/CandidateList/ExpandableRow/ExpandableRow.css
+++ b/client/src/pages/recruiter/CandidateList/ExpandableRow/ExpandableRow.css
@@ -38,6 +38,18 @@
     background-color: rgb(131, 30, 30);
     border: 2px solid rgb(97, 83, 83);
 }
+.rowMargin{
+    margin: 5px 0px;
+}
+.rowButton{
+    cursor: pointer;
+    border-radius: 7px;
+    width: 250px;
+    background-color: #1a2b6d;
+    color: #fff;
+    text-align: center;
+    padding: 10px 5px;
+}
 .flex{
     padding: 10px 50px;
     width: 100%;
@@ -53,4 +65,7 @@
         border-radius: 0px;
         flex-direction: column;
     } 
+    .rowMargin{
+        margin: 10px 0px;
+    }
 } 
